@@ -1,5 +1,5 @@
 /*
- * acpi.c -- ACPI methods low-level access code for TSM30X class laptops
+ * acpi.c -- ACPI methods low-level access code for TSM70 class laptops
  * 
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the
