@@ -85,7 +85,7 @@ static int __init omnibook_bt_init(struct omnibook_operation *io_op)
 }
 
 static struct omnibook_tbl wireless_table[] __initdata = {
-	{TSM30X | TSA105, {ACPI,}},	/* stubs to select backend */
+	{TSM70 | TSA105, {ACPI,}},	/* stubs to select backend */
 	{TSM40, {SMI,}},		/* stubs to select backend */
 	{0,}
 };
@@ -96,7 +96,7 @@ static struct omnibook_feature __declared_feature bt_driver = {
 	.read = omnibook_bt_read,
 	.write = omnibook_bt_write,
 	.init = omnibook_bt_init,
-	.ectypes = TSM30X | TSM40 | TSA105,
+	.ectypes = TSM70 | TSM40 | TSA105,
 	.tbl = wireless_table,
 };
 
