@@ -104,15 +104,16 @@ static int __init omnibook_brightness_init(struct omnibook_operation *io_op)
 {
 	/*
 	 * FIXME: What is exactly the max value for each model ?
-	 * I know that it's 7 for the TSM30X, TSM40 and TSA105
+	 * I know that it's 7 for the TSM30X, TSM70, TSM40 and TSA105
 	 * and previous versions of this driver (wrongly) assumed it was 10 for
 	 * all models.
 	 * 
 	 * TSM30X
+	 * TSM70
 	 * TSM40
 	 * TSA105
 	 */
-	if (omnibook_ectype & (TSM30X | TSM40 | TSA105))
+	if (omnibook_ectype & (TSM70 | TSM30X | TSM40 | TSA105))
 		omnibook_max_brightness = 7;
 	else {
 		omnibook_max_brightness = 10;
@@ -143,9 +144,9 @@ static void __exit omnibook_brightness_cleanup(struct omnibook_operation *io_op)
 }
 
 static struct omnibook_tbl lcd_table[] __initdata = {
-	{TSM30X, {CDI, TSM70_LCD_READ, TSM70_LCD_WRITE, 0, 0, 0}},
+	{TSM70, {CDI, TSM70_LCD_READ, TSM70_LCD_WRITE, 0, 0, 0}},
 	{TSM40, {SMI, SMI_GET_LCD_BRIGHTNESS, SMI_SET_LCD_BRIGHTNESS, 0, 0, 0}},
-	{XE3GF | TSP10 | TSM30X, SIMPLE_BYTE(EC, XE3GF_BRTS, XE3GF_BRTS_MASK)},
+	{XE3GF | TSP10 | TSM70 | TSM30X, SIMPLE_BYTE(EC, XE3GF_BRTS, XE3GF_BRTS_MASK)},
 	{XE3GC, SIMPLE_BYTE(EC, XE3GC_BTVL, XE3GC_BTVL_MASK)},
 	{AMILOD, SIMPLE_BYTE(EC, AMILOD_CBRG, XE3GC_BTVL_MASK)},
 	{TSA105, SIMPLE_BYTE(EC, A105_BNDT, A105_BNDT_MASK)},
@@ -159,7 +160,7 @@ static struct omnibook_feature __declared_feature lcd_driver = {
 	.write = omnibook_brightness_write,
 	.init = omnibook_brightness_init,
 	.exit = omnibook_brightness_cleanup,
-	.ectypes = XE3GF | XE3GC | AMILOD | TSP10 | TSM30X | TSM40 | TSA105,
+	.ectypes = XE3GF | XE3GC | AMILOD | TSP10 | TSM70 | TSM30X | TSM40 | TSA105,
 	.tbl = lcd_table,
 };
 
