@@ -33,7 +33,7 @@ static int omnibook_temperature_read(char *buffer, struct omnibook_operation *io
 }
 
 static struct omnibook_tbl temp_table[] __initdata = {
-	{XE3GF | TSP10 | TSM30X, SIMPLE_BYTE(EC, XE3GF_CTMP, 0)},
+	{XE3GF | TSP10 | TSM70 | TSM30X, SIMPLE_BYTE(EC, XE3GF_CTMP, 0)},
 	{XE3GC | AMILOD, SIMPLE_BYTE(EC, XE3GC_CTMP, 0)},
 	{OB500 | OB510 | OB6000 | OB6100 | XE4500 | XE2, SIMPLE_BYTE(EC, OB500_CTMP, 0)},
 	{OB4150, SIMPLE_BYTE(EC, OB4150_TMP, 0)},
@@ -46,7 +46,7 @@ static struct omnibook_feature __declared_feature temperature_driver = {
 	.read = omnibook_temperature_read,
 	.ectypes =
 	    XE3GF | XE3GC | OB500 | OB510 | OB6000 | OB6100 | XE4500 | OB4150 | XE2 | AMILOD | TSP10
-	    | TSM30X,
+	    | TSM70 | TSM30X,
 	.tbl = temp_table,
 };
 
